Remove deprecated API usage from tests