@@ -102,7 +102,7 @@ public final class PromisesTest {
 	public void toArraySingleTest() {
 		Integer[] array = await(toArray(Integer.class, Promise.of(321)));
 		assertEquals(1, array.length);
-		assertEquals(new Integer(321), array[0]);
+		assertEquals(Integer.valueOf(321), array[0]);
 
 	}
 
@@ -110,17 +110,17 @@ public final class PromisesTest {
 	public void arrayToArrayDoubleTest() {
 		Integer[] array = await(toArray(Integer.class, Promise.of(321), Promise.of(322)));
 		assertEquals(2, array.length);
-		assertEquals(new Integer(321), array[0]);
-		assertEquals(new Integer(322), array[1]);
+		assertEquals(Integer.valueOf(321), array[0]);
+		assertEquals(Integer.valueOf(322), array[1]);
 	}
 
 	@Test
 	public void varargsToArrayDoubleTest() {
 		Integer[] array = await(toArray(Integer.class, Promise.of(321), Promise.of(322), Promise.of(323)));
 		assertEquals(3, array.length);
-		assertEquals(new Integer(321), array[0]);
-		assertEquals(new Integer(322), array[1]);
-		assertEquals(new Integer(323), array[2]);
+		assertEquals(Integer.valueOf(321), array[0]);
+		assertEquals(Integer.valueOf(322), array[1]);
+		assertEquals(Integer.valueOf(323), array[2]);
 
 	}
 
@@ -128,49 +128,49 @@ public final class PromisesTest {
 	public void streamToArrayDoubleTest() {
 		Integer[] array = await(toArray(Integer.class, Stream.of(Promise.of(321), Promise.of(322), Promise.of(323))));
 		assertEquals(3, array.length);
-		assertEquals(new Integer(321), array[0]);
-		assertEquals(new Integer(322), array[1]);
-		assertEquals(new Integer(323), array[2]);
+		assertEquals(Integer.valueOf(321), array[0]);
+		assertEquals(Integer.valueOf(322), array[1]);
+		assertEquals(Integer.valueOf(323), array[2]);
 	}
 
 	@Test
 	public void listToArrayDoubleTest() {
 		Integer[] array = await(toArray(Integer.class, asList(Promise.of(321), Promise.of(322), Promise.of(323))));
 		assertEquals(3, array.length);
-		assertEquals(new Integer(321), array[0]);
-		assertEquals(new Integer(322), array[1]);
-		assertEquals(new Integer(323), array[2]);
+		assertEquals(Integer.valueOf(321), array[0]);
+		assertEquals(Integer.valueOf(322), array[1]);
+		assertEquals(Integer.valueOf(323), array[2]);
 	}
 
 	@Test
 	public void toTuple1Test() {
 		Tuple1<Integer> tuple1 = await(toTuple(Tuple1::new, Promise.of(321)));
-		assertEquals(new Integer(321), tuple1.getValue1());
+		assertEquals(Integer.valueOf(321), tuple1.getValue1());
 
 		Tuple1<Integer> tuple2 = await(toTuple(Promise.of(321)));
-		assertEquals(new Integer(321), tuple2.getValue1());
+		assertEquals(Integer.valueOf(321), tuple2.getValue1());
 	}
 
 	@Test
 	public void toTuple2Test() {
 		Tuple2<Integer, String> tuple1 = await(toTuple(Tuple2::new, Promise.of(321), Promise.of("322")));
-		assertEquals(new Integer(321), tuple1.getValue1());
+		assertEquals(Integer.valueOf(321), tuple1.getValue1());
 		assertEquals("322", tuple1.getValue2());
 
 		Tuple2<Integer, String> tuple2 = await(toTuple(Promise.of(321), Promise.of("322")));
-		assertEquals(new Integer(321), tuple2.getValue1());
+		assertEquals(Integer.valueOf(321), tuple2.getValue1());
 		assertEquals("322", tuple2.getValue2());
 	}
 
 	@Test
 	public void toTuple3Test() {
 		Tuple3<Integer, String, Double> tuple1 = await(toTuple(Tuple3::new, Promise.of(321), Promise.of("322"), Promise.of(323.34)));
-		assertEquals(new Integer(321), tuple1.getValue1());
+		assertEquals(Integer.valueOf(321), tuple1.getValue1());
 		assertEquals("322", tuple1.getValue2());
 		assertEquals(323.34, tuple1.getValue3());
 
 		Tuple3<Integer, String, Double> tuple2 = await(toTuple(Promise.of(321), Promise.of("322"), Promise.of(323.34)));
-		assertEquals(new Integer(321), tuple2.getValue1());
+		assertEquals(Integer.valueOf(321), tuple2.getValue1());
 		assertEquals("322", tuple2.getValue2());
 		assertEquals(323.34, tuple2.getValue3());
 	}
@@ -178,13 +178,13 @@ public final class PromisesTest {
 	@Test
 	public void toTuple4Test() {
 		Tuple4<Integer, String, Double, Duration> tuple1 = await(toTuple(Tuple4::new, Promise.of(321), Promise.of("322"), Promise.of(323.34), Promise.of(ofMillis(324))));
-		assertEquals(new Integer(321), tuple1.getValue1());
+		assertEquals(Integer.valueOf(321), tuple1.getValue1());
 		assertEquals("322", tuple1.getValue2());
 		assertEquals(323.34, tuple1.getValue3());
 		assertEquals(ofMillis(324), tuple1.getValue4());
 
 		Tuple4<Integer, String, Double, Duration> tuple2 = await(toTuple(Promise.of(321), Promise.of("322"), Promise.of(323.34), Promise.of(ofMillis(324))));
-		assertEquals(new Integer(321), tuple2.getValue1());
+		assertEquals(Integer.valueOf(321), tuple2.getValue1());
 		assertEquals("322", tuple2.getValue2());
 		assertEquals(323.34, tuple2.getValue3());
 		assertEquals(ofMillis(324), tuple2.getValue4());
@@ -193,36 +193,36 @@ public final class PromisesTest {
 	@Test
 	public void toTuple5Test() {
 		Tuple5<Integer, String, Double, Duration, Integer> tuple1 = await(toTuple(Tuple5::new, Promise.of(321), Promise.of("322"), Promise.of(323.34), Promise.of(ofMillis(324)), Promise.of(1)));
-		assertEquals(new Integer(321), tuple1.getValue1());
+		assertEquals(Integer.valueOf(321), tuple1.getValue1());
 		assertEquals("322", tuple1.getValue2());
 		assertEquals(323.34, tuple1.getValue3());
 		assertEquals(ofMillis(324), tuple1.getValue4());
-		assertEquals(new Integer(1), tuple1.getValue5());
+		assertEquals(Integer.valueOf(1), tuple1.getValue5());
 
 		Tuple5<Integer, String, Double, Duration, Integer> tuple2 = await(toTuple(Promise.of(321), Promise.of("322"), Promise.of(323.34), Promise.of(ofMillis(324)), Promise.of(1)));
-		assertEquals(new Integer(321), tuple2.getValue1());
+		assertEquals(Integer.valueOf(321), tuple2.getValue1());
 		assertEquals("322", tuple2.getValue2());
 		assertEquals(323.34, tuple2.getValue3());
 		assertEquals(ofMillis(324), tuple2.getValue4());
-		assertEquals(new Integer(1), tuple2.getValue5());
+		assertEquals(Integer.valueOf(1), tuple2.getValue5());
 	}
 
 	@Test
 	public void toTuple6Test() {
 		Tuple6<Integer, String, Double, Duration, Integer, Object> tuple1 = await(toTuple(Tuple6::new, Promise.of(321), Promise.of("322"), Promise.of(323.34), Promise.of(ofMillis(324)), Promise.of(1), Promise.of(null)));
-		assertEquals(new Integer(321), tuple1.getValue1());
+		assertEquals(Integer.valueOf(321), tuple1.getValue1());
 		assertEquals("322", tuple1.getValue2());
 		assertEquals(323.34, tuple1.getValue3());
 		assertEquals(ofMillis(324), tuple1.getValue4());
-		assertEquals(new Integer(1), tuple1.getValue5());
+		assertEquals(Integer.valueOf(1), tuple1.getValue5());
 		assertNull(tuple1.getValue6());
 
 		Tuple6<Integer, String, Double, Duration, Integer, Object> tuple2 = await(toTuple(Promise.of(321), Promise.of("322"), Promise.of(323.34), Promise.of(ofMillis(324)), Promise.of(1), Promise.of(null)));
-		assertEquals(new Integer(321), tuple2.getValue1());
+		assertEquals(Integer.valueOf(321), tuple2.getValue1());
 		assertEquals("322", tuple2.getValue2());
 		assertEquals(323.34, tuple2.getValue3());
 		assertEquals(ofMillis(324), tuple2.getValue4());
-		assertEquals(new Integer(1), tuple2.getValue5());
+		assertEquals(Integer.valueOf(1), tuple2.getValue5());
 		assertNull(tuple2.getValue6());
 	}
 
